# simpli

./: Makefile  README.adoc  README.md  factorial.imp  simpli.cabal  test.imp
docs/: .gitignore  beamerthemeesposito.sty  bibliography.bib  documentation.tex  esposito-documentation.cls  presentation.odp  presentation.tex
src/: Cli.hs  Environment.hs  Main.hs  Parser.hs  Parsers.hs
src/Parser/: Aexp.hs  Bexp.hs  Com.hs  Core.hs  Environment.hs  Fundamentals.hs  Readers.hs
src/Parsers/: Aexp.hs  Base.hs  Bexp.hs  Com.hs  Core.hs  Environment.hs  Fundamentals.hs  Readers.hs
test/: MainTest.hs
