cabal-version:       >=1.10
name:                simpli
version:             0.1.0
synopsis:            SIMPLI, the Simple IMP Language Interpreter
copyright:           Copyright (C) 2020, Andrea Esposito
description:         SIMPLI, the Simple IMP Language Interpreter, is (as the
                     name suggests) a simple implementation of an interpreter
                     for the IMP language. It has been created for a university
                     project.
homepage:            https://github.com/espositoandrea/simpli
bug-reports:         https://github.com/espositoandrea/simpli/issues
license:             GPL-3
license-file:        LICENSE
author:              Andrea Esposito <a.esposito39@studenti.uniba.it>
maintainer:          Andrea Esposito <a.esposito39@studenti.uniba.it>
category:            Development
build-type:          Simple
extra-source-files:  README.md docs/documentation.pdf

executable simpli
  main-is:             Main.hs
  other-modules:       Cli
                       Environment
                       Parsers
                       Parsers.Core
                       Parsers.Fundamentals
                       Parsers.Aexp
                       Parsers.Bexp
                       Parsers.Readers
                       Parsers.Com
                       Parsers.Environment
                       Paths_simpli

  autogen-modules:     Paths_simpli
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
  hs-source-dirs:      src
  default-language:    Haskell98
